# pyfdd

./: .gitignore  Convert2dl.py  LICENSE  MedipixMatrix.py  README.md  developement_notes.txt  fitman.py  fits.py  lib2dl.py  main.py  patterncreator.py  pyproject.toml  setup.py  userscript_fman_pad4.py  userscript_fman_tpxquad.py  userscript_mm_pad4.py  userscript_mm_tpxquad.py  userscript_tpxquad.py
LICENSE.md/: README.md
MedipixMatrix/: MedipixMatrix.py  userscript_tpxquad.py
PyFDD/: __init__.py  fitman.py  fits.py  patterncreator.py
ecsli_tools/: __init__.py  ecsli_tools.py
examples/: Library_explorer.html  Library_explorer.ipynb  Library_explorer.py  notebook_dp_pad.html  notebook_dp_pad.ipynb  notebook_dp_pad.py  notebook_dp_tpxquad.html  notebook_dp_tpxquad.ipynb  notebook_dp_tpxquad.py  notebook_fitman_multiple_site_fit.html  notebook_fitman_multiple_site_fit.ipynb  notebook_fitman_multiple_site_fit.py  notebook_fitman_two_site_fit.html  notebook_fitman_two_site_fit.ipynb  notebook_fitman_two_site_fit.py  notebook_mm_pad.ipynb  notebook_mm_tpxquad.ipynb  notebook_pattern_creator.html  notebook_pattern_creator.ipynb  notebook_pattern_creator.py  userscript_fman_tpxquad.py  userscript_mm_pad4.py  userscript_mm_tpxquad.py
gui/: __init__.py  datapattern_interface.py  datapattern_interfaces.py  run_datapattern_widget.py  simlibrary_interface.py
my_scripts/: Convert2dl.py
pyfdd/: __init__.py  __main__.py  fit.py  fitmanager.py  fits.py  patterncreator.py
qt_designer/: bkgtools_widget.py  bkgtools_widget.ui  buildmesh_dialog.ui  colorscale_dialog.ui  (+13 more)
(+112 files in other folders)
